# chatter3

./: .gitignore  AGENT.MD  AGENTS.md  CLAUDE.md  README.md  TODO.md  flake.nix
backend-go/: .env.example  Makefile  README.md  TODO.md  docker-compose.yml  go.mod  go.sum  sqlc.yaml
backend-go/cmd/server/: main.go
backend-go/internal/auth/: jwt.go  jwt_test.go
backend-go/internal/config/: config.go  config_test.go
backend-go/internal/dispatcher/: dispatcher.go
backend-go/internal/protocol/: codec.go  types.go
backend-go/internal/protocol/v2/: types.go  types_test.go
backend-go/internal/repository/: errors.go  file.go  group.go  message.go  repository_test.go  user.go
backend-go/internal/repository/sqlcgen/: attach_helpers.go  groups.sql.go  messages.sql.go  models.go  users.sql.go
backend-go/internal/service/: file.go  file_test.go  group.go  group_integration_test.go  group_test.go  helpers.go  message.go  message_integration_test.go  message_test.go  profile_media.go  profile_media_test.go  user.go
backend-go/internal/session/: manager.go  manager_test.go
backend-go/internal/storage/: db.go  message_repo.go
backend-go/internal/transport/http/: server.go  server_test.go  service.go  websocket.go  websocket_test.go
backend-go/internal/transport/tcp/: conn.go  server.go
backend-go/migrations/: 001_initial.sql  002_user_profile.sql  003_profile_media.sql
backend-go/sql/queries/: groups.sql  messages.sql  users.sql
client/: .clang-format  .gitignore  CMakeLists.txt  build.sh  command.txt  readme.md  run.ps1  script.md
client/resources/: config.json  resources.qrc
client/resources/styles/: styles.qss
client/src/: FileTransferManager.cpp  FileTransferManager.h  GlobalEventBus.cpp  GlobalEventBus.h  WindowManager.cpp  WindowManager.h  main.cpp
client/src/dialogs/: UserSelectionDialog.cpp  UserSelectionDialog.h
client/src/network/: ChatClient.cpp  ChatClient.h  MessageProcessor.cpp  MessageProcessor.h
client/src/ui/: ChatWindow.cpp  ChatWindow.h  GroupChatSession.cpp  GroupChatSession.h  GroupChatTab.cpp  GroupChatTab.h  LoginWindow.cpp  LoginWindow.h  MessageBubble.cpp  MessageBubble.h  PrivateChatSession.cpp  PrivateChatSession.h  PrivateChatTab.cpp  PrivateChatTab.h  PublicChatTab.cpp  PublicChatTab.h  RegisterWindow.cpp  RegisterWindow.h
client/src/utils/: ConfigManager.cpp  ConfigManager.h  GroupTask.cpp  GroupTask.h  JsonConverter.cpp  JsonConverter.h  MessageHandler.cpp  MessageHandler.h  User.h  UserInfo.cpp  UserInfo.h  UserManager.cpp  UserManager.h
docs/: dev-architecture.md  frontend-ui-design.md  protocol-v1.md  protocol-v2.md
frontend/: .env.example  README.md  TODO.md  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  config.ts  desktop.ts  i18n.ts  protocol.ts  styles.css  theme.ts  vite-env.d.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: api.rs  db.rs  lib.rs  main.rs  realtime.rs
frontend/src/api/: client.test.ts  client.ts
frontend/src/components/: ArchiveTools.tsx  AuthPanel.tsx  ChatPanel.tsx  Composer.tsx  ConversationList.tsx  CreateGroupModal.tsx  DevPanel.tsx  GlobalFeedback.tsx  GroupPanel.tsx  IdentityPanel.tsx  MessageList.tsx  SettingsModal.tsx  Sidebar.tsx  TelemetryPanel.tsx  UserProfileModal.tsx  conversationPresentation.ts  format.ts  messageTimeline.test.ts  messageTimeline.ts  utils.ts
frontend/src/components/ui/: Avatar.test.tsx  Avatar.tsx  ConnectionIndicator.tsx  IconButton.tsx
frontend/src/hooks/: useKeyboardShortcuts.ts  useWindowSizeClass.test.ts  useWindowSizeClass.ts
frontend/src/realtime/: client.test.ts  client.ts
frontend/src/store/: chatStore.logout.test.ts  chatStore.test.ts  chatStore.ts  helpers.ts
frontend/src/styles/: base.css  chat.css  overlays.css  responsive.css  shell.css  tokens.css
server/: .gitignore  pom.xml  readme.md
server/src/main/java/com/example/chatterserver/: ChatterServerApplication.java
server/src/main/java/com/example/chatterserver/config/: BeanConfig.java  JacksonConfig.java  JwtConfig.java  ServerConfig.java
server/src/main/java/com/example/chatterserver/dto/: MessageDTO.java  (+2 more)
server/src/main/resources/: api-doc.md  application.yml  schema.sql
server/src/main/resources/mapper/: GroupMapper.xml  MessageMapper.xml  UserMapper.xml
(+24 files in other folders)
