[package]
name = "chatter3-desktop"
version = "0.1.0"
description = "Chatter3 desktop shell"
authors = ["Elaine"]
edition = "2021"

[lib]
name = "chatter3_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
