[package]
name = "chatter3-desktop"
version = "0.1.0"
description = "Chatter3 desktop shell"
authors = ["Elaine"]
edition = "2021"

[lib]
name = "chatter3_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
keyring = "3"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-opener = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2.4.3"
tauri-plugin-window-state = "2.4.1"
rusqlite = { version = "0.39.0", features = ["bundled"] }
